<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_storke_color_primary"
        android:gravity="center"
        android:paddingLeft="@dimen/g_2"
        android:paddingTop="@dimen/g_1"
        android:paddingRight="@dimen/g_2"
        android:paddingBottom="@dimen/g_1"
        android:text="0.5 KM Away"
        android:textColor="@color/teal_200"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextCaptionWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/text_seater_7"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        style="@style/TextCaptionWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/g_2"
        android:text="@string/text_Snm1234z"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:background="@color/pink_500"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextHeaderWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dummy_car"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        style="@style/TextCaptionWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_price"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


    <TextView
        style="@style/TextCaptionWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_price_mileage"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        style="@style/TextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/g_2"
        android:alpha="0.5"
        android:text="@string/text_mile_age_fee"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_shape_white_image_view"
        android:src="@drawable/car_dummy"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        style="@style/TextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_1"
        android:alpha="0.5"
        android:text="@string/text_rent_fee"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="@dimen/m_2"
        android:background="@color/color_grey_transparent_50"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="26dp" />
</androidx.constraintlayout.widget.ConstraintLayout>