<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_marginTop="@dimen/m_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/label_icon_siz"
            android:layout_height="@dimen/label_icon_siz"
            android:layout_marginStart="8dp"
            android:padding="@dimen/g_2"
            android:src="@drawable/ico_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextLabelGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/g_1"

            android:text="@string/text_location"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            style="@style/TextCaptionGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/g_1"

            android:text="@string/text_current_location"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/m_1"
            android:alpha="0.2"
            android:background="@color/color_grey_text"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
          />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/label_icon_siz"
            android:layout_height="@dimen/label_icon_siz"
            android:layout_marginTop="@dimen/m_1"
            android:padding="@dimen/g_2"
            android:src="@drawable/icodated"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextLabelGrey"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/text_date_and_time"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextCaptionGrey"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/g_1"
            android:text="@string/text_now"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <View
        android:id="@+id/view2"
        android:layout_width="1dp"

        android:layout_height="0dp"

        android:alpha="0.2"

        android:background="@color/color_grey_text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/label_icon_siz"
            android:layout_height="@dimen/label_icon_siz"
            android:layout_marginStart="8dp"
            android:padding="@dimen/g_2"
            android:src="@drawable/ico_time"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            style="@style/TextLabelGrey"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/text_duration"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            style="@style/TextCaptionGrey"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/g_1"
            android:text="@string/text_1hr"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
