<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/m_1"
 app:cardCornerRadius="@dimen/m_1"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginTop="@dimen/m_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/label_icon_siz"
        android:layout_height="@dimen/label_icon_siz"
        android:layout_marginStart="8dp"
        android:padding="@dimen/g_2"
        android:src="@drawable/ico_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextLabelGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/g_1"

        android:text="@string/text_location"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        style="@style/TextCaptionGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/text_current_location"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/m_1"
        android:alpha="0.2"
        android:background="@color/color_grey_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/label_icon_siz"
        android:layout_height="@dimen/label_icon_siz"
        android:layout_marginTop="@dimen/m_1"
        android:padding="@dimen/g_2"
        android:src="@drawable/icodated"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextLabelGrey"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/text_date_and_time"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextCaptionGrey"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/g_1"
        android:text="@string/text_now"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/teal_200"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="Go"
        android:textColor="@color/color_primary"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"

        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/m_5"

        android:alpha="0.2"

        android:background="@color/color_grey_text"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/label_icon_siz"
        android:layout_height="@dimen/label_icon_siz"
        android:layout_marginStart="8dp"
        android:padding="@dimen/g_2"
        android:src="@drawable/ico_time"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        style="@style/TextLabelGrey"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/text_duration"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        style="@style/TextCaptionGrey"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/g_1"
        android:text="@string/text_1hr"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
