<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/m_2"
    android:layout_marginBottom="@dimen/m_2"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView27"
        style="@style/TextCaptionGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_estimate_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        style="@style/TextLabelGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*Amounts is not final"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        style="@style/TextCaptionGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S$52.00"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="@dimen/label_icon_siz"
        android:layout_height="@dimen/label_icon_siz"
        android:padding="@dimen/g_3"
        android:rotation="180"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:layout_marginTop="@dimen/m_2"
        android:background="@color/color_grey_text"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView29"
        style="@style/TextCaptionGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_2"
        android:text="@string/text_need_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="@dimen/label_icon_siz"
        android:layout_height="@dimen/label_icon_siz"
        android:padding="@dimen/g_3"
        android:rotation="180"
        android:src="@drawable/ico_elp"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView29" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/m_2"
        android:alpha="0.2"
        android:background="@color/color_grey_text"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView30"
        style="@style/TextCaptionGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_2"
        android:text="@string/text_cancel_booking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />


    <ImageView
        android:layout_width="@dimen/label_icon_siz"
        android:layout_height="@dimen/label_icon_siz"
        android:padding="@dimen/g_3"
        android:rotation="180"
        android:src="@drawable/icohelpcancel"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView30" />


</androidx.constraintlayout.widget.ConstraintLayout>