<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_car_search_result_scene"
    tools:context=".ui.car.FragmentCarSearchResult">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/label_icon_siz"
        android:layout_height="@dimen/label_icon_siz"
        android:layout_marginStart="8dp"
        android:padding="@dimen/g_3"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        style="@style/TextHeaderBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_search_result"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/include"
        layout="@layout/layout_car_search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_2"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        tools:layout_editor_absoluteX="29dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/m_2"
        android:background="@color/color_primary"
        android:padding="@dimen/m_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextHeaderPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_plus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextCaptionWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/g_2"
            android:text="@string/text_car_found"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/chip_mediun_height"
            android:text="Map"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            app:chipCornerRadius="4dp"
            app:chipEndPadding="@dimen/m_1"
            app:chipIconTint="@color/color_primary"
            app:chipStartPadding="@dimen/m_1"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/chip_mediun_height"
            android:layout_marginRight="@dimen/m_2"
            android:text="Filter"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            app:chipCornerRadius="6dp"
            app:chipEndPadding="@dimen/m_1"
            app:chipIconTint="@color/color_primary"
            app:chipStartPadding="@dimen/m_1"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/chip4"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recCar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip5"
            tools:itemCount="20"
            tools:listitem="@layout/item_car" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>
